@@ -206,6 +206,24 @@
                   <placeholder/>
                 </child>
                 <child>
+                  <object class="GtkLabel" id="password/too_short">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="xalign">0</property>
+                    <property name="label" translatable="yes">Short password</property>
+                    <attributes>
+                      <attribute name="scale" value="0.83333333333329995"/>
+                      <attribute name="foreground" value="#8b8b00000000"/>
+                    </attributes>
+                  </object>
+                  <packing>
+                    <property name="position">1</property>
+                  </packing>
+                </child>
+                <child type="tab">
+                  <placeholder/>
+                </child>
+                <child>
                   <object class="GtkLabel" id="password/weak">
                     <property name="visible">True</property>
                     <property name="can_focus">False</property>
@@ -217,7 +235,7 @@
                     </attributes>
                   </object>
                   <packing>
-                    <property name="position">1</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
                 <child type="tab">
@@ -235,7 +253,7 @@
                     </attributes>
                   </object>
                   <packing>
-                    <property name="position">2</property>
+                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child type="tab">
@@ -253,7 +271,7 @@
                     </attributes>
                   </object>
                   <packing>
-                    <property name="position">3</property>
+                    <property name="position">4</property>
                   </packing>
                 </child>
                 <child type="tab">
@@ -268,24 +286,6 @@
                     <attributes>
                       <attribute name="scale" value="0.83333333333329995"/>
                       <attribute name="foreground" value="#000064640000"/>
-                    </attributes>
-                  </object>
-                  <packing>
-                    <property name="position">4</property>
-                  </packing>
-                </child>
-                <child type="tab">
-                  <placeholder/>
-                </child>
-                <child>
-                  <object class="GtkLabel" id="password/too_short">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="xalign">0</property>
-                    <property name="label" translatable="yes">Short password</property>
-                    <attributes>
-                      <attribute name="scale" value="0.83333333333329995"/>
-                      <attribute name="foreground" value="#8b8b00000000"/>
                     </attributes>
                   </object>
                   <packing>
