@@ -7,6 +7,7 @@ ubiquity (2.13.12) UNRELEASED; urgency=low
     apt cache; this is much faster when many packages are involved, since it
     avoids repeating autoremoval calculations over and over again.
   * Sort and consolidate imports.
+  * Fix ordering of encryption password strength indications (LP: #1068391).
 
   [ Aurélien Gâteau ]
   * KDE frontend: show name of installed OS as partition name if
